# AvxMath

./: AvxMath.cpp  AvxMath.sln  AvxMath.vcxproj  AvxMath.vcxproj.filters  CMakeLists.txt  Readme.md  testDx.cpp  testDx.h  testStdlib.cpp  testStdlib.h  testsMisc.h
AvxMath/: AvxMath.h  AvxMathMatrix.h  AvxMathMem.h  AvxMathMisc.cpp  AvxMathMisc.h  AvxMathPredicates.cpp  AvxMathPredicates.h  AvxMathQuaternion.cpp  AvxMathQuaternion.h  AvxMathTrig.cpp  AvxMathTrig.h  AvxMathVector.h  NatvisFile.natvis
