cmake_minimum_required( VERSION 2.8.11 )
project( AvxMath )
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -march=native")
add_executable( AvxMath AvxMath/AvxMathMisc.cpp AvxMath/AvxMathQuaternion.cpp AvxMath/AvxMathTrig.cpp testStdlib.cpp AvxMath.cpp )
set_target_properties( AvxMath PROPERTIES CXX_STANDARD 17 )
